tests/fixtures/invalid/NowdocNotIndented.php
<?php

declare(strict_types=1);

namespace Test;

class NowdocNotIndented
{
    private const MY_NOWDOC = <<<'NOWDOC'
not indented!
NOWDOC;
}
